Add ChangeStreamDescription Handler.
